--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,6 @@
     --magnolia: hsl(217, 100%, 97%);
     --alabaster: hsl(231, 100%, 99%);
     --white: hsl(0, 0%, 100%);
+    --radius: 0.5rem;
   }
 }
